--- a/contourmap/demo.css
+++ b/contourmap/demo.css
@@ -91,3 +91,26 @@ a {
 .leaflet-canvas-layer {
     opacity: 1;
 }
+
+.sidebar-body {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    overflow: auto;
+    display: block;
+}
+
+.navbar-button {
+    width: 200px;
+    margin: 0;
+    padding: 10px;
+    background-color: rgb(121, 120, 120);
+    color: white;
+    border: solid 1px white;
+    border-radius: 4px;
+    display: block;
+}
+
+.navbar-button:hover {
+    background-color: rgb(75, 75, 75);
+}
