--- a/contourmap/leaflet-geoman2.css
+++ b/contourmap/leaflet-geoman2.css
@@ -1,8 +1,13 @@
+/* 设置工具栏宽度 */
+:root {
+  --awidth:30px;
+}
+/* 调整小圆圈格式 */
 .marker-icon,
 .marker-icon:focus {
   background-color: #ffffff;
   border: 1px solid #3388ff;
-  border-radius: 0%;
+  border-radius: 50%; 
   margin: -7px 0 0 -8px !important;
   width: 12px !important;
   height: 12px !important;
@@ -51,9 +56,9 @@
   display: none;
 }
 
-.leaflet-pm-toolbar {
+/* .leaflet-pm-toolbar {
   
-}
+} */
 
 .leaflet-pm-toolbar .leaflet-buttons-control-button {
   padding: 5px;
@@ -433,7 +438,7 @@ textarea.leaflet-styleeditor-input {
     font: 20px/1"Helvetica Neue", Arial, Helvetica, sans-serif;
     padding: 10px;
     position: relative;
-    whitespace: no-wrap;
+    white-space: no-wrap;
 }
 .leaflet-styleeditor-stroke {
     height: 20px;
