--- a/index/css/index.css
+++ b/index/css/index.css
@@ -2,9 +2,7 @@
     margin: 0;
     padding: 0;    
 }
-h1{
-    
-}
+
 body{
     background: rgba(196, 202, 204, 0.452);
     background-image: url(../res/A3.jpg);
@@ -14,7 +12,7 @@ a{
     text-decoration: none;
     position: absolute;
     left: 50%;
-    top: 10%;
+    /* top: 10%; */
     transform: translate(-50%,50%);
     font-size: 20px;
     background: linear-gradient(90deg,#03a9f4,#dd68aa,#e4e673,#64b4da);
