--- a/contourmap/leaflet-measure.css
+++ b/contourmap/leaflet-measure.css
@@ -1,3 +1,8 @@
+/* 设置工具栏宽度 */
+:root {
+	/* --awidth:3rem; */
+	--awidth:30px;
+  }
 .leaflet-control-measure h3,.leaflet-measure-resultpopup h3 {
 	margin:0 0 12px;
 	padding-bottom:10px;
@@ -46,16 +51,17 @@
 	border-radius:2px
 }
 .leaflet-retina .leaflet-control-measure .leaflet-control-measure-toggle,.leaflet-retina .leaflet-control-measure .leaflet-control-measure-toggle:hover {
-	width:3rem;
-	height:3rem;
-	/* width:5rem;
-	height:5rem; */
+	width:var(--awidth);
+	height:var(--awidth);
+	/* width:30px;
+	height:30px; */
 	/* background-image:url(assets/rulers_@2X.png) */
 	background-image:url(icon2/工程绘图.png);
 }
 /* 设置icon图片大小 */
 .leaflet-touch .leaflet-control-measure .leaflet-control-measure-toggle,.leaflet-touch .leaflet-control-measure .leaflet-control-measure-toggle:hover {
-	background-size:28px 28px
+	background-size:80% 80%
+	/* background-size:28px 28px */
 }
 .leaflet-control-measure .startprompt h3 {
 	margin-bottom:10px
