--- a/contourmap/demo.css
+++ b/contourmap/demo.css
@@ -137,3 +137,34 @@ a {
 .navbar-button:hover {
     background-color: rgb(75, 75, 75);
 }
+
+.info {
+    padding: 5px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+.legend {
+    text-align: left;
+    line-height: 24px;
+    color: #555;
+}
+.legend i {
+    width: 30px;
+    height: 24px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+.opt {
+    background: rgb(150, 150, 150);
+    /* text-align: center; */
+    text-align: center;
+    /* display: inline; */
+}
+.my-div-icon {
+    color: rgb(7, 253, 109);
+    font-size: 15px;
+}
