--- a/contourmap/index.css
+++ b/contourmap/index.css
@@ -168,21 +168,75 @@ a {
 	text-shadow:1px 1px 1px #ffffff,-1px 1px 1px #ffffff,-1px -1px 1px #ffffff,1px -1px 1px #ffffff;
 }
 
-.popup-label {
+.popup-open {
+    width: 49%;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    font: 1.3em sans-serif;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-left: solid 1px rgb(100, 100, 100);
+    border-bottom: solid 1px rgb(100, 100, 100);
+    border-right: solid 1px rgb(100, 100, 100);
+    text-align: center;
+    display:inline-block;
+}
+
+.popup-close {
     width: 48%;
     height: 30px;
     margin: 0;
-    /* padding: 10px; */
-    background-color: rgb(120, 120, 120);
+    padding: 0;
+    background-color: rgb(100, 100, 100);
     color: white;
-    border: solid 1px white;
-    border-radius: 4px;
-    /* display: block; */
+    font: 1.3em sans-serif;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-left: solid 1px rgb(100, 100, 100);
+    border-bottom: solid 1px rgb(100, 100, 100);
+    border-right: solid 1px rgb(100, 100, 100);
     text-align: center;
-    vertical-align:middle;
-    /* text-align-last:center; */
     display:inline-block;
 }
-.popup-label:hover {
-    background-color: rgb(75, 75, 75);
+
+.popup-head {
+    font-size: 15px;    
+    font-weight:bold;
 }
+.popup-text {
+    font-size: 12px;
+    font-weight: normal;
+    font-family: sans-serif;
+}
+.pad10 {
+    padding:10px 0 10px 0; 
+}
+.padtop5 {
+    padding:5px 0 0 0; 
+}
+.padbottom5 {
+    padding: 0 0 5px 0; 
+}
+.padtop10 {
+    padding:10px 0 0 0; 
+}
+.padbottom10 {
+    padding: 0 0 10px 0; 
+}
+.nopad {
+    padding:0 0 0 0; 
+}
+.headline {
+    border-top:0.5px solid #000;
+}
+.hr {
+    width: 98%;
+}
+.lineblock {
+    display: inline-block;
+}
+
+
