--- a/contourmap/index.css
+++ b/contourmap/index.css
@@ -75,8 +75,7 @@ a {
     font-size: 16px;
     /* display: inline; */
 }
-
-#map {
+.map {
     position:absolute;
     height: 100%;
     width: 100%;
@@ -85,10 +84,8 @@ a {
     /* background-color: rgb(8, 38, 49); */
     background-color: #333;
     /* border-color: rgb(0, 0, 0); */
-    border:0px;
-    z-index: -999;
+    z-index: -999;    
 }
-
 .leaflet-canvas-layer {
     opacity: 1;
 }
