--- a/index/css/index.css
+++ b/index/css/index.css
@@ -11,7 +11,7 @@ body{
 a{
     text-decoration: none;
     position: absolute;
-    left: 50%;
+    /* left: 50%; */
     /* top: 10%; */
     transform: translate(-50%,50%);
     font-size: 20px;
@@ -40,6 +40,45 @@ a::before{
     z-index: -1;
 }
 a:hover::before{
+    animation: sun 8s infinite;
+}
+
+a:hover{
+    animation: sun 8s infinite;
+}
+
+b{
+    text-decoration: none;
+    position: absolute;
+    left: 80%;
+    /* top: 10%; */
+    transform: translate(-50%,50%);
+    font-size: 20px;
+    background: linear-gradient(90deg,#03a9f4,#dd68aa,#e4e673,#64b4da);
+    background-size: 400%;
+    width: 300px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    color: rgb(10, 10, 10);
+    border-radius: 50px;
+    z-index: 1;
+}
+b::before{
+    content: "";
+    position: absolute;
+    left: -5px;
+    right: -5px;
+    top: -5px;
+    bottom: -5px;
+    /* border: 1px solid red; */
+    background: linear-gradient(90deg,#03a9f4,#dd68aa,#e4e673,#64b4da);
+    background-size: 400%;
+    border-radius: 100px;
+    filter: blur(20px);
+    z-index: -1;
+}
+b:hover::before{
     animation: sun 8s infinite;
 }
 
